# state-machine-external-logger

./: .gitignore  CMakeLists.txt  README.md
include/: state_logger.h
src/: gpio_handler.pio  main.c  state_encoder.py
